# persistance-nonstarionary-fractal-tools

./: .gitignore  DESCRIPTION  EEG_QUICKSTART.md  LICENSE  MANIFEST.in  NAMESPACE  PYTHON_INSTALL.md  README.md  TODO.md  example_workflow.R  hk.py  load_tools.R  pyproject.toml  requirements-notebooks.txt  setup.py  test_derivative.py
Python/: PYTHON_SETUP_GUIDE.md  __init__.py  climacogram.py  derivative_analysis.py  eeg_example.py  eeg_loader.py  example_usage.py  hurst.py  requirements.txt
R/: README.md  derivative.R  highLevelAnalysis.R  hk_change.R  hk_simulator.r  hktest.R  mothly_velocity_anomalies.R  regimeChange.R  regime_change.R  velocity.R
R/Tools/: csv_reader_tool.r
notebooks/: 01_exploration.ipynb  02_eeg_exploration.ipynb  03_method_comparison.ipynb  README.md
output/: README.md
tests/: __init__.py  test_climacogram.py  test_derivative_analysis.py  test_derivative_integration.py  test_hurst.py  testthat.R
tests/testthat/: test-derivative.R  test-hk_simulator.R  test-regime_change.R
